# pyroute2

./: .flake8  .gitignore  .mypy-check-paths  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  EXPERIMENTS.md  MANIFEST.in  MESSAGING  Makefile  README.contribute.rst  README.license.md  README.make.md  README.md  README.minimal.md  README.packages.md  README.report.md  README.report.rst  README.rst  STATUS.md  VERSION  config_validator.py  configure.gawk  nl80211sample.py  noxfile.py  pyproject.minimal.toml  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.repo.txt  setup.cfg  setup.minimal.cfg  setup.py  setup.py.in  ss_tst.py  tox.ini
.github/: FUNDING.yml
pyroute2/: Makefile  __init__.py  arp.py  common.py  compat.py  config.py  conntrack.py  debugger.py  devlink.py  eth.py  iproute.py  ipset.py  ipvs.py  iwutil.py  lab.py  loader.py  minimal.py  netns.py  nftables.py  noipdb.py  process.py  protocols.py  proxy.py  setup.cfg  setup.cfg.in  statsd.py  wirouting.py  wiset.py
pyroute2.core/: Makefile  README.license.md  README.rst  setup.cfg  setup.json
pyroute2.core/pr2modules/: common.py  conntrack.py  devlink.py  iwutil.py  proxy.py
pyroute2.core/pr2modules/bsd/: util.py
pyroute2.core/pr2modules/cli/: console.py  parser.py
pyroute2.core/pr2modules/config/: __init__.py  asyncio.py  eventlet.py  test_platform.py
pyroute2.core/pr2modules/inotify/: inotify_fd.py  inotify_msg.py
pyroute2.core/pr2modules/iproute/: __init__.py  bsd.py  linux.py  remote.py  req.py  windows.py
pyroute2.core/pr2modules/netlink/: __init__.py  exceptions.py  nlsocket.py
pyroute2.core/pr2modules/netns/: __init__.py  manager.py
pyroute2.core/pr2modules/protocols/: __init__.py  icmp.py  rawsocket.py
pyroute2.core/pr2modules/requests/: address.py  common.py  interface.py  link.py  main.py  neighbour.py  route.py
pyroute2.nftables/: LICENSE.Apache.v2  Makefile  README.rst  setup.cfg  setup.json
pyroute2.nftables/pr2modules/nftables/: expressions.py  main.py  rule.py
pyroute2/bsd/: README  iproute.py  pf_route.py  rtmsocket.py  util.py
pyroute2/bsd/pf_route/: __init__.py  freebsd.py  openbsd.py
pyroute2/bsd/route/: __init__.py
pyroute2/bsd/rtmsocket/: __init__.py  freebsd.py  openbsd.py
pyroute2/cli/: __init__.py  console.py  parser.py  server.py  session.py
pyroute2/config/: __init__.py  asyncio.py  capabilities.py  eventlet.py  test_platform.py  version.py
pyroute2/decoder/: args.py  loader.py  main.py
pyroute2/dhcp/: __init__.py  cli.py  client.py  dhcp4msg.py  dhcp4socket.py  exceptions.py  fsm.py  hooks.py  iface_status.py  leases.py  messages.py  server_detector.py  timers.py  xids.py
pyroute2/dhcp/constants/: bootp.py  dhcp.py
pyroute2/dhcp/enums/: bootp.py  dhcp.py
pyroute2/ethtool/: common.py  ethtool.py  ioctl.py
pyroute2/ext/: rawsocket.py
pyroute2/fixtures/: __init__.py  iproute.py  plan9.py
pyroute2/fixtures/iproute/: __init__.py
pyroute2/inotify/: inotify_fd.py  inotify_msg.py
pyroute2/iocore/: __init__.py  addrpool.py  broker.py  iocore.py  loop.py  template.py  utils.py
pyroute2/iocore/modules/: __init__.py  connect.py  disconnect.py  discover.py  provide.py  register.py  reload.py  remove.py  serve.py  shutdown.py  stop.py  subscribe.py  unregister.py  unsubscribe.py
pyroute2/ipdb/: __init__.py  common.py  compat.py  exceptions.py  interface.py  interfaces.py  linkedset.py  main.py  route.py  routes.py  rule.py  rules.py  transactional.py
pyroute2/iproute/: __init__.py  bsd.py  darwin.py  ipmock.py  linux.py  pyodide.py  remote.py  req.py  windows.py
pyroute2/ndb/: address.py  auth_manager.py  cli.py  cluster.py  compat.py  dbschema.py  events.py  interface.py  interfaces.py  main.py  messages.py  neighbour.py  noipdb.py  query.py  report.py  route.py  rtnl_object.py  schema.py  source.py  sql.py  sync_api.py  task_manager.py  transaction.py  transport.py  view.py
pyroute2/ndb/objects/: __init__.py  address.py  interface.py  neighbour.py  netns.py  probe.py  route.py  rule.py
pyroute2/netlink/: __init__.py  buffer.py  client.py  core.py  exceptions.py  generic.py  iocore.py  ipdb.py  ipq.py  iproute.py  marshal.py  nlsocket.py  proxy.py  rt_files.py  rtnl.py  taskstats.py
pyroute2/netlink/connector/: __init__.py  cn_proc.py
pyroute2/netlink/devlink/: __init__.py
pyroute2/netlink/diag/: __init__.py  ss2.py
pyroute2/netlink/dquot/: __init__.py
pyroute2/netlink/event/: __init__.py  acpi_event.py  dquot.py  thermal.py  thermal_event.py
pyroute2/netlink/generic/: __init__.py  ethtool.py  ipvs.py  l2tp.py  mptcp.py  wireguard.py
pyroute2/netlink/ipdb/: __init__.py  compat.py
pyroute2/netlink/ipq/: __init__.py
pyroute2/netlink/nfnetlink/: __init__.py  conntrack.py  ipset.py  nfctsocket.py  nftables.py  nftsocket.py
pyroute2/netlink/nl80211/: __init__.py
pyroute2/netlink/plugins/: plugin_ptrace.py
pyroute2/netlink/rtmsg/: ifaddrmsg.py  ifinfmsg.py  ndmsg.py  rtmsg.py
pyroute2/netlink/rtnl/: __init__.py  bomsg.py  br_vlan.py  brmsg.py  dhcpmsg.py  errmsg.py  fibmsg.py  ifaddrmsg.py  ifinfmsg.py  ifstatsmsg.py  iprsocket.py  iw_event.py  marshal.py  ndmsg.py  ndtmsg.py  nsidmsg.py  probe_msg.py  req.py  riprsocket.py  rtgenmsg.py  rtmsg.py  tcmsg.py  tuntapmsg.py
pyroute2/netlink/taskstats/: __init__.py
pyroute2/netlink/uevent/: __init__.py
pyroute2/netns/: __init__.py  create_socket_tool.py  manager.py  nslink.py  process.py
pyroute2/netns/process/: __init__.py  base_p2.py  base_p3.py  proxy.py
pyroute2/nftables/: expressions.py  main.py  rule.py
pyroute2/nslink/: nslink.py  nspopen.py
pyroute2/plan9/: __init__.py  client.py  filesystem.py  plan9socket.py  server.py
pyroute2/protocols/: __init__.py  rawsocket.py
pyroute2/pyroute2/: __init__.py
pyroute2/remote/: __init__.py  iproute.py  shell.py  transport.py
pyroute2/requests/: address.py  bridge.py  common.py  link.py  main.py  neighbour.py  probe.py  route.py  rule.py  tc.py  vlan.py
pyroute2/rpc/: __init__.py
pyroute2/utils/: client.py  proxy.py
templates/: Makefile  setup.cfg  setup.py
(+865 files in other folders)
