[metadata]
name = pyroute2
version = file: VERSION
description = Python Netlink library
long_description = file: README.rst
author = Peter Saveliev
author_email = peter@svinota.eu
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2
license = GPL-2.0-or-later OR Apache-2.0
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
install_requires =
    win_inet_pton ; platform_system == "Windows"
    importlib-metadata ; python_version < "3.8"
packages_dir =
    =pyroute2
packages = find:

[options.entry_points]
pyroute2 =
    bsd = pyroute2.bsd
    netns = pyroute2.netns
    config = pyroute2.config
    conntrack = pyroute2.conntrack
    iproute = pyroute2.iproute
    common = pyroute2.common
    netlink = pyroute2.netlink
    iwutil = pyroute2.iwutil
    protocols = pyroute2.protocols
    requests = pyroute2.requests
    IW = pyroute2.iwutil:IW
    DL = pyroute2.devlink:DL
    IPRoute = pyroute2.iproute:IPRoute
    IPBatch = pyroute2.iproute:IPBatch
    RawIPRoute = pyroute2.iproute:RawIPRoute
    ChaoticIPRoute = pyroute2.iproute:ChaoticIPRoute
    NetlinkError = pyroute2.netlink.exceptions:NetlinkError
    ChaoticException = pyroute2.netlink.exceptions:ChaoticException
    NetlinkDecodeError = pyroute2.netlink.exceptions:NetlinkDecodeError
    NetlinkDumpInterrupted = pyroute2.netlink.exceptions:NetlinkDumpInterrupted
    Conntrack = pyroute2.conntrack:Conntrack
    ConntrackEntry = pyroute2.conntrack:ConntrackEntry
    IPRSocket = pyroute2.netlink.rtnl.iprsocket:IPRSocket
    TaskStats = pyroute2.netlink.taskstats:TaskStats
    NL80211 = pyroute2.netlink.nl80211:NL80211
    DevlinkSocket = pyroute2.netlink.devlink:DevlinkSocket
    AcpiEventSocket = pyroute2.netlink.event.acpi_event:AcpiEventSocket
    DQuotSocket = pyroute2.netlink.event.dquot:DQuotSocket
    IPQSocket = pyroute2.netlink.ipq:IPQSocket
    DiagSocket = pyroute2.netlink.diag:DiagSocket
    UeventSocket = pyroute2.netlink.uevent:UeventSocket
    GenericNetlinkSocket = pyroute2.netlink.generic:GenericNetlinkSocket
    L2tp = pyroute2.netlink.generic.l2tp:L2tp
    MPTCP = pyroute2.netlink.generic.mptcp:MPTCP
    WireGuard = pyroute2.netlink.generic.wireguard:WireGuard
    NFTSocket = pyroute2.netlink.nfnetlink.nftsocket:NFTSocket
    NFCTSocket = pyroute2.netlink.nfnetlink.nfctsocket:NFCTSocket
    Ethtool = pyroute2.ethtool.ethtool:Ethtool
    ipdb = pyroute2.ipdb
    IPDB = pyroute2.ipdb.main:IPDB
    DeprecationException = pyroute2.ipdb.exceptions:DeprecationException
    CommitException = pyroute2.ipdb.exceptions:CommitException
    CreateException = pyroute2.ipdb.exceptions:CreateException
    PartialCommitException = pyroute2.ipdb.exceptions:PartialCommitException
    IPSet = pyroute2.ipset:IPSet
    WiSet = pyroute2.wiset:WiSet
    ipset = pyroute2.ipset
    wiset = pyroute2.wiset
    NDB = pyroute2.ndb.main:NDB
    ndb = pyroute2.ndb
    NoIPDB = pyroute2.ndb.noipdb:NoIPDB
    Console = pyroute2.cli.console:Console
    Server = pyroute2.cli.server:Server
    NFTables = pyroute2.nftables.main:NFTables
    nftables = pyroute2.nftables
    remote = pyroute2.remote
    nslink = pyroute2.nslink.nslink
    NetNS = pyroute2.nslink.nslink:NetNS
    NSPopen = pyroute2.nslink.nspopen:NSPopen
    RemoteSocket = pyroute2.remote.transport:RemoteSocket
    RemoteIPRoute = pyroute2.remote:RemoteIPRoute
    dhcp = pyroute2.dhcp
    arp = pyroute2.arp
console_scripts =
    ss2 = pyroute2.netlink.diag.ss2:run [psutil]
    pyroute2-cli = pyroute2.ndb.cli:run
    pyroute2-dhcp-client = pyroute2.dhcp.client:run
    pyroute2-test-platform = pyroute2.config.test_platform:run
