[metadata]
name = pyroute2
version = file: VERSION
description = Python Netlink library
long_description = file: README.rst
author = Peter Saveliev
author_email = peter@svinota.eu
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2
license = GPL-2.0-or-later OR Apache-2.0
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
install_requires =
    win_inet_pton ; platform_system == "Windows"
    importlib-metadata ; python_version < "3.8"
packages_dir =
    =pyroute2
packages = find:

[options.entry_points]
console_scripts =
    ss2 = pyroute2.netlink.diag.ss2:run [psutil]
    pyroute2-cli = pyroute2.ndb.cli:run
    pyroute2-dhcp-client = pyroute2.dhcp.client:run
    pyroute2-test-platform = pyroute2.config.test_platform:run
