[metadata]
name = pyroute2.core
version = file: VERSION
author = Peter Saveliev
author_email = peter@svinota.eu
description = Python Netlink library: the core
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2
license = dual license GPLv2+ and Apache v2
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
packages = find:
namespace_packages = pr2modules

[options.entry_points]
pr2modules =
    bsd = pr2modules.bsd
    netns = pr2modules.netns
    config = pr2modules.config
    conntrack = pr2modules.conntrack
    iproute = pr2modules.iproute
    common = pr2modules.common
    netlink = pr2modules.netlink
    iwutil = pr2modules.iwutil
    protocols = pr2modules.protocols
    requests = pr2modules.requests
    IW = pr2modules.iwutil:IW
    IPRoute = pr2modules.iproute:IPRoute
    IPBatch = pr2modules.iproute:IPBatch
    RawIPRoute = pr2modules.iproute:RawIPRoute
    ChaoticIPRoute = pr2modules.iproute:ChaoticIPRoute
    NetlinkError = pr2modules.netlink.exceptions:NetlinkError
    ChaoticException = pr2modules.netlink.exceptions:ChaoticException
    NetlinkDecodeError = pr2modules.netlink.exceptions:NetlinkDecodeError
    NetlinkDumpInterrupted = pr2modules.netlink.exceptions:NetlinkDumpInterrupted
    Conntrack = pr2modules.conntrack:Conntrack
    ConntrackEntry = pr2modules.conntrack:ConntrackEntry
    IPRSocket = pr2modules.netlink.rtnl.iprsocket:IPRSocket
    TaskStats = pr2modules.netlink.taskstats:TaskStats
    NL80211 = pr2modules.netlink.nl80211:NL80211
    DevlinkSocket = pr2modules.netlink.devlink:DevlinkSocket
    AcpiEventSocket = pr2modules.netlink.event.acpi_event:AcpiEventSocket
    DQuotSocket = pr2modules.netlink.event.dquot:DQuotSocket
    IPQSocket = pr2modules.netlink.ipq:IPQSocket
    DiagSocket = pr2modules.netlink.diag:DiagSocket
    UeventSocket = pr2modules.netlink.uevent:UeventSocket
    GenericNetlinkSocket = pr2modules.netlink.generic:GenericNetlinkSocket
    L2tp = pr2modules.netlink.generic.l2tp:L2tp
    MPTCP = pr2modules.netlink.generic.mptcp:MPTCP
    WireGuard = pr2modules.netlink.generic.wireguard:WireGuard
    NFTSocket = pr2modules.netlink.nfnetlink.nftsocket:NFTSocket
    NFCTSocket = pr2modules.netlink.nfnetlink.nfctsocket:NFCTSocket
console_scripts =
    ss2 = pr2modules.netlink.diag.ss2:run [psutil]
