[metadata]
name = pyroute2
version = file: VERSION
description = Python Netlink library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2
license = dual license GPLv2+ and Apache v2
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta

[options]
install_requires =
    win_inet_pton ; platform_system == "Windows"
    importlib-metadata ; python_version < "3.8"
    pyroute2.core
    pyroute2.nslink
    pyroute2.nftables
    pyroute2.ethtool
    pyroute2.ipset
    pyroute2.ipdb
    pyroute2.ndb
packages_dir =
    =pyroute2
packages = find:
