[metadata]
name = {name}
version = file: VERSION
author = Peter V. Saveliev
author_email = peter@svinota.eu
description = Python Netlink library: {description}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroute2 
license = dual license GPLv2+ and Apache v2
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta

[options]
packages = find:
namespace_packages = pr2modules
install_requires =
    {requires}

[options.entry_points]
pr2modules =
    {entry_points}
